--- a/titanic/kaggle_titanic.ipynb
+++ b/titanic/kaggle_titanic.ipynb
@@ -11,8 +11,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "train = pd.read_csv(\"../kaggle/titanic/train.csv\", dtype={\"Age\": np.float64}, )\n",
-    "test  = pd.read_csv(\"../kaggle/titanic/test.csv\", dtype={\"Age\": np.float64}, )"
+    "train = pd.read_csv(\"train.csv\", dtype={\"Age\": np.float64}, )\n",
+    "test  = pd.read_csv(\"test.csv\", dtype={\"Age\": np.float64}, )"
    ]
   },
   {
@@ -1379,9 +1379,9 @@
      "output_type": "stream",
      "text": [
       "KNeighbors 0.701459034792\n",
-      "DecisionTree 0.765432098765\n",
+      "DecisionTree 0.760942760943\n",
       "SVC 0.687991021324\n",
-      "RandomForest 0.796857463524\n"
+      "RandomForest 0.802469135802\n"
      ]
     }
    ],
@@ -1410,7 +1410,28 @@
     "    results.append(result)\n",
     "\n",
     "for i in range(len(names)):\n",
-    "    print(names[i],results[i].mean())\n"
+    "    print(names[i],results[i].mean())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alg = RandomForestClassifier()\n",
+    "\n",
+    "alg.fit(train_data[predictors], train_data[\"Survived\"])\n",
+    "\n",
+    "predictions = alg.predict(test_data[predictors])\n",
+    "\n",
+    "submission = pd.DataFrame({\n",
+    "        \"PassengerId\": test_data[\"PassengerId\"],\n",
+    "        \"Survived\": predictions\n",
+    "    })\n",
+    "\n",
+    "submission.to_csv('submission.csv', index=False)"
    ]
   },
   {
