--- a/titanic/kaggle_titanic.ipynb
+++ b/titanic/kaggle_titanic.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -206,46 +208,136 @@
        "      <td>NaN</td>\n",
        "      <td>C</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sandstrom, Miss. Marguerite Rut</td>\n",
+       "      <td>female</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PP 9549</td>\n",
+       "      <td>16.7000</td>\n",
+       "      <td>G6</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bonnell, Miss. Elizabeth</td>\n",
+       "      <td>female</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113783</td>\n",
+       "      <td>26.5500</td>\n",
+       "      <td>C103</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Saundercock, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5. 2151</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Andersson, Mr. Anders Johan</td>\n",
+       "      <td>male</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>347082</td>\n",
+       "      <td>31.2750</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Vestrom, Miss. Hulda Amanda Adolfina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>350406</td>\n",
+       "      <td>7.8542</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
-       "5            6         0       3   \n",
-       "6            7         0       1   \n",
-       "7            8         0       3   \n",
-       "8            9         1       3   \n",
-       "9           10         1       2   \n",
+       "    PassengerId  Survived  Pclass  \\\n",
+       "0             1         0       3   \n",
+       "1             2         1       1   \n",
+       "2             3         1       3   \n",
+       "3             4         1       1   \n",
+       "4             5         0       3   \n",
+       "5             6         0       3   \n",
+       "6             7         0       1   \n",
+       "7             8         0       3   \n",
+       "8             9         1       3   \n",
+       "9            10         1       2   \n",
+       "10           11         1       3   \n",
+       "11           12         1       1   \n",
+       "12           13         0       3   \n",
+       "13           14         0       3   \n",
+       "14           15         0       3   \n",
        "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "5                                   Moran, Mr. James    male   NaN      0   \n",
-       "6                            McCarthy, Mr. Timothy J    male  54.0      0   \n",
-       "7                     Palsson, Master. Gosta Leonard    male   2.0      3   \n",
-       "8  Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female  27.0      0   \n",
-       "9                Nasser, Mrs. Nicholas (Adele Achem)  female  14.0      1   \n",
+       "                                                 Name     Sex   Age  SibSp  \\\n",
+       "0                             Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1   Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                              Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3        Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                            Allen, Mr. William Henry    male  35.0      0   \n",
+       "5                                    Moran, Mr. James    male   NaN      0   \n",
+       "6                             McCarthy, Mr. Timothy J    male  54.0      0   \n",
+       "7                      Palsson, Master. Gosta Leonard    male   2.0      3   \n",
+       "8   Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female  27.0      0   \n",
+       "9                 Nasser, Mrs. Nicholas (Adele Achem)  female  14.0      1   \n",
+       "10                    Sandstrom, Miss. Marguerite Rut  female   4.0      1   \n",
+       "11                           Bonnell, Miss. Elizabeth  female  58.0      0   \n",
+       "12                     Saundercock, Mr. William Henry    male  20.0      0   \n",
+       "13                        Andersson, Mr. Anders Johan    male  39.0      1   \n",
+       "14               Vestrom, Miss. Hulda Amanda Adolfina  female  14.0      0   \n",
        "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  \n",
-       "5      0            330877   8.4583   NaN        Q  \n",
-       "6      0             17463  51.8625   E46        S  \n",
-       "7      1            349909  21.0750   NaN        S  \n",
-       "8      2            347742  11.1333   NaN        S  \n",
-       "9      0            237736  30.0708   NaN        C  "
+       "    Parch            Ticket     Fare Cabin Embarked  \n",
+       "0       0         A/5 21171   7.2500   NaN        S  \n",
+       "1       0          PC 17599  71.2833   C85        C  \n",
+       "2       0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3       0            113803  53.1000  C123        S  \n",
+       "4       0            373450   8.0500   NaN        S  \n",
+       "5       0            330877   8.4583   NaN        Q  \n",
+       "6       0             17463  51.8625   E46        S  \n",
+       "7       1            349909  21.0750   NaN        S  \n",
+       "8       2            347742  11.1333   NaN        S  \n",
+       "9       0            237736  30.0708   NaN        C  \n",
+       "10      1           PP 9549  16.7000    G6        S  \n",
+       "11      0            113783  26.5500  C103        S  \n",
+       "12      0         A/5. 2151   8.0500   NaN        S  \n",
+       "13      5            347082  31.2750   NaN        S  \n",
+       "14      0            350406   7.8542   NaN        S  "
       ]
      },
      "execution_count": 2,
@@ -254,7 +346,7 @@
     }
    ],
    "source": [
-    "train.head(10)"
+    "train.head(15)"
    ]
   },
   {
@@ -422,18 +514,26 @@
    },
    "outputs": [],
    "source": [
-    "def correct_data(titanic_data):\n",
+    "def correct_data(train_data, test_data):\n",
     "    \n",
-    "    titanic_data.Age = titanic_data.Age.fillna(titanic_data.Age.median())\n",
+    "    train_data.Age = train_data.Age.fillna(test_data.Age.median())\n",
+    "    train_data.Fare = train_data.Fare.fillna(test_data.Fare.median())\n",
     "    \n",
+    "    test_data.Age = test_data.Age.fillna(test_data.Age.median())\n",
+    "    test_data.Fare = test_data.Fare.fillna(test_data.Fare.median())    \n",
+    "    \n",
+    "    train_data = correct_data_common(train_data)\n",
+    "    test_data = correct_data_common(test_data)    \n",
+    "\n",
+    "    return train_data,  test_data\n",
+    "\n",
+    "def correct_data_common(titanic_data):\n",
     "    titanic_data.Sex = titanic_data.Sex.replace(['male', 'female'], [0, 1])\n",
-    "    \n",
     "    titanic_data.Embarked = titanic_data.Embarked.fillna(\"S\")\n",
     "    titanic_data.Embarked = titanic_data.Embarked.replace(['C', 'S', 'Q'], [0, 1, 2])\n",
     "    \n",
-    "    titanic_data.Fare = titanic_data.Fare.fillna(titanic_data.Fare.median())\n",
-    "\n",
-    "    return titanic_data"
+    "    return titanic_data\n",
+    "    "
    ]
   },
   {
@@ -444,8 +544,7 @@
    },
    "outputs": [],
    "source": [
-    "train_data = correct_data(train)\n",
-    "test_data  = correct_data(test)"
+    "train_data,  test_data = correct_data(train, test)\n"
    ]
   },
   {
@@ -492,7 +591,7 @@
        "      <td>-0.005007</td>\n",
        "      <td>-0.035144</td>\n",
        "      <td>-0.042939</td>\n",
-       "      <td>0.034212</td>\n",
+       "      <td>0.034759</td>\n",
        "      <td>-0.057527</td>\n",
        "      <td>-0.001652</td>\n",
        "      <td>0.012658</td>\n",
@@ -504,7 +603,7 @@
        "      <td>1.000000</td>\n",
        "      <td>-0.338481</td>\n",
        "      <td>0.543351</td>\n",
-       "      <td>-0.064910</td>\n",
+       "      <td>-0.061956</td>\n",
        "      <td>-0.035322</td>\n",
        "      <td>0.081629</td>\n",
        "      <td>0.257307</td>\n",
@@ -516,7 +615,7 @@
        "      <td>-0.338481</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-0.131900</td>\n",
-       "      <td>-0.339898</td>\n",
+       "      <td>-0.344489</td>\n",
        "      <td>0.083081</td>\n",
        "      <td>0.018443</td>\n",
        "      <td>-0.549500</td>\n",
@@ -528,7 +627,7 @@
        "      <td>0.543351</td>\n",
        "      <td>-0.131900</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.081163</td>\n",
+       "      <td>-0.079306</td>\n",
        "      <td>0.114631</td>\n",
        "      <td>0.245489</td>\n",
        "      <td>0.182333</td>\n",
@@ -536,15 +635,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Age</th>\n",
-       "      <td>0.034212</td>\n",
-       "      <td>-0.064910</td>\n",
-       "      <td>-0.339898</td>\n",
-       "      <td>-0.081163</td>\n",
+       "      <td>0.034759</td>\n",
+       "      <td>-0.061956</td>\n",
+       "      <td>-0.344489</td>\n",
+       "      <td>-0.079306</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.233296</td>\n",
-       "      <td>-0.172482</td>\n",
-       "      <td>0.096688</td>\n",
-       "      <td>-0.040166</td>\n",
+       "      <td>-0.233396</td>\n",
+       "      <td>-0.168329</td>\n",
+       "      <td>0.099571</td>\n",
+       "      <td>-0.044949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SibSp</th>\n",
@@ -552,7 +651,7 @@
        "      <td>-0.035322</td>\n",
        "      <td>0.083081</td>\n",
        "      <td>0.114631</td>\n",
-       "      <td>-0.233296</td>\n",
+       "      <td>-0.233396</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.414838</td>\n",
        "      <td>0.159651</td>\n",
@@ -564,7 +663,7 @@
        "      <td>0.081629</td>\n",
        "      <td>0.018443</td>\n",
        "      <td>0.245489</td>\n",
-       "      <td>-0.172482</td>\n",
+       "      <td>-0.168329</td>\n",
        "      <td>0.414838</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.216225</td>\n",
@@ -576,7 +675,7 @@
        "      <td>0.257307</td>\n",
        "      <td>-0.549500</td>\n",
        "      <td>0.182333</td>\n",
-       "      <td>0.096688</td>\n",
+       "      <td>0.099571</td>\n",
        "      <td>0.159651</td>\n",
        "      <td>0.216225</td>\n",
        "      <td>1.000000</td>\n",
@@ -588,7 +687,7 @@
        "      <td>-0.125953</td>\n",
        "      <td>0.305762</td>\n",
        "      <td>-0.022521</td>\n",
-       "      <td>-0.040166</td>\n",
+       "      <td>-0.044949</td>\n",
        "      <td>0.030874</td>\n",
        "      <td>-0.035957</td>\n",
        "      <td>-0.268865</td>\n",
@@ -600,22 +699,22 @@
       ],
       "text/plain": [
        "             PassengerId  Survived    Pclass       Sex       Age     SibSp  \\\n",
-       "PassengerId     1.000000 -0.005007 -0.035144 -0.042939  0.034212 -0.057527   \n",
-       "Survived       -0.005007  1.000000 -0.338481  0.543351 -0.064910 -0.035322   \n",
-       "Pclass         -0.035144 -0.338481  1.000000 -0.131900 -0.339898  0.083081   \n",
-       "Sex            -0.042939  0.543351 -0.131900  1.000000 -0.081163  0.114631   \n",
-       "Age             0.034212 -0.064910 -0.339898 -0.081163  1.000000 -0.233296   \n",
-       "SibSp          -0.057527 -0.035322  0.083081  0.114631 -0.233296  1.000000   \n",
-       "Parch          -0.001652  0.081629  0.018443  0.245489 -0.172482  0.414838   \n",
-       "Fare            0.012658  0.257307 -0.549500  0.182333  0.096688  0.159651   \n",
-       "Embarked       -0.017443 -0.125953  0.305762 -0.022521 -0.040166  0.030874   \n",
+       "PassengerId     1.000000 -0.005007 -0.035144 -0.042939  0.034759 -0.057527   \n",
+       "Survived       -0.005007  1.000000 -0.338481  0.543351 -0.061956 -0.035322   \n",
+       "Pclass         -0.035144 -0.338481  1.000000 -0.131900 -0.344489  0.083081   \n",
+       "Sex            -0.042939  0.543351 -0.131900  1.000000 -0.079306  0.114631   \n",
+       "Age             0.034759 -0.061956 -0.344489 -0.079306  1.000000 -0.233396   \n",
+       "SibSp          -0.057527 -0.035322  0.083081  0.114631 -0.233396  1.000000   \n",
+       "Parch          -0.001652  0.081629  0.018443  0.245489 -0.168329  0.414838   \n",
+       "Fare            0.012658  0.257307 -0.549500  0.182333  0.099571  0.159651   \n",
+       "Embarked       -0.017443 -0.125953  0.305762 -0.022521 -0.044949  0.030874   \n",
        "\n",
        "                Parch      Fare  Embarked  \n",
        "PassengerId -0.001652  0.012658 -0.017443  \n",
        "Survived     0.081629  0.257307 -0.125953  \n",
        "Pclass       0.018443 -0.549500  0.305762  \n",
        "Sex          0.245489  0.182333 -0.022521  \n",
-       "Age         -0.172482  0.096688 -0.040166  \n",
+       "Age         -0.168329  0.099571 -0.044949  \n",
        "SibSp        0.414838  0.159651  0.030874  \n",
        "Parch        1.000000  0.216225 -0.035957  \n",
        "Fare         0.216225  1.000000 -0.268865  \n",
@@ -635,20 +734,37 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#−1.0から−0.7 強い負の相関\n",
+    "#−0.7から−0.4 負の相関\n",
+    "#−0.4から−0.2 弱い負の相関\n",
+    "#−0.2から+0.2 ほとんど相関がない\n",
+    "#+0.2から+0.4 弱い正の相関\n",
+    "#+0.4から+0.7 正の相関\n",
+    "#+0.7から+1.0 強い正の相関"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression 0.780022446689\n",
-      "SVC 0.750841750842\n",
-      "LinearSVC 0.796857463524\n",
-      "KNeighbors 0.742985409652\n",
-      "DecisionTree 0.780022446689\n",
-      "RandomForest 0.784511784512\n",
-      "RandomForest2 0.795735129068\n",
-      "MLPClassifier 0.757575757576\n"
+      "LogisticRegression 0.785634118967\n",
+      "SVC 0.68911335578\n",
+      "LinearSVC 0.747474747475\n",
+      "KNeighbors 0.703703703704\n",
+      "DecisionTree 0.76430976431\n",
+      "RandomForest 0.806958473625\n",
+      "RandomForest2 0.820426487093\n",
+      "MLPClassifier 0.778900112233\n"
      ]
     }
    ],
@@ -692,10 +808,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "alg = rf2\n",
